# galdr

./: .claudeignore  .dockerignore  .env.example  .galdrignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GALDR.md  GEMINI.md  GUARDRAILS.md  LICENSE  MAINTAINER_EXPORT.md  NOTICE  README.md  ROADMAP.md  opencode.json  pyproject.toml  requirements.txt
.agent/: agent_instructions.md
.agent/agents/: README.md  g-agnt-qa-engineer.md
.agent/commands/: g-broadcast.md  g-bug-report.md  g-cli-copilot.md  g-constraint-check.md  g-dependency-graph.md  g-git-push.md  g-go-code.md  g-go-review-swarm.md  g-go-review.md  g-go-verify.md  g-go.md  g-goal-update.md  g-harvest-intake.md  g-ingest-docs.md  g-medic.md  g-pcac-adopt.md  g-pcac-order.md  g-pcac-spawn.md  g-pcac-status.md  g-plan.md  g-qa.md  g-recon-yt.md  g-release-publish.md  g-res-review.md  g-sprint.md  g-status.md  g-task-update.md  g-workspace-status.md  g-wrkspc-init.md  g-wrkspc-member-add.md  g-wrkspc-sync.md
.agent/hooks/: README.md  g-hk-agent-complete.ps1  g-hk-pre-commit.ps1  g-hk-session-start.ps1  g-hk-vault-migrate.ps1  g-hk-vault-reindex.ps1  validate-shell.ps1
.claude/: CLAUDE.md  claude_instructions.md  hooks.json  local.settings.json  settings.json
.codex/: INSTALL.md  codex_instructions.md  config.toml
.copilot/: README.md
.cursor/: cursor_instructions.md  hooks.json
.gald3r/: .gitignore  .identity  BUGS.md  CONSTRAINTS.md  DECISIONS.md  IDEA_BOARD.md  PLAN.md  PRDS.md  PROJECT.md  RELEASES.md  SUBSYSTEMS.md  TASKS.md  learned-facts.md
.galdr/: .gitignore  .identity  BUGS.md  CONSTRAINTS.md  DECISIONS.md  FEATURES.md  PLAN.md  PRDS.md  PROJECT.md  SUBSYSTEMS.md  TASKS.md
.github/: copilot-instructions.md
.opencode/: INSTALL.md  opencode_instructions.md
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
docs/: 20260403_175842_Cursor_SKILL_ARCHITECTURE_RESTRUCTURING.md  20260404_104618_Cursor_NAMING_CONVENTION_FOR_GALDR_FULL.md  AGENTS.md  COMMANDS.md  FIRST_TIME_USE.md  HOOKS.md  MCP_TOOLS.md  PLUGINS.md  SKILLS.md
scripts/: bootstrap_member_gald3r_marker.ps1  check_member_repo_gald3r_guard.ps1  remediate_member_gald3r_marker.ps1  sync-parity.ps1  validate_workspace_members_gald3r.ps1
skill_packs/: README.md
templates/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  GUARDRAILS.md  windows_symlinks.bat
(+1077 files in other folders)
