[project]
name = "galdr"
version = "1.0.0"
description = "AI-powered development system with task management, knowledge vault, and specialized skills for Cursor, Claude Code, Gemini, Codex, and OpenCode"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "FS Galdr" }
]
keywords = ["ai", "cursor", "claude-code", "gemini", "task-management", "mcp", "development", "knowledge-vault"]

dependencies = [
    # ============================================================================
    # AI & LLM APIs
    # ============================================================================
    "openai>=1.12.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.0",
    
    # ============================================================================
    # Data Processing & Utilities
    # ============================================================================
    "requests>=2.31.0",
    "pydantic>=2.6.1",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.2",

    # ============================================================================
    # Web Crawling (platform docs, articles)
    # ============================================================================
    "crawl4ai>=0.8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

# Optional: Text chunking for advanced RAG workflows
chunking = [
    "langchain>=0.1.9",
    "langchain-text-splitters>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docker/galdr", "templates"]

[tool.hatch.build.targets.sdist]
include = [
    "docker/",
    "templates/",
    "docs/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
